--- a/src/style.css
+++ b/src/style.css
@@ -94,3 +94,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.cognito-spa {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
